--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
     </div>
 
     <div class="city-gallery"></div>
-    <script src="/js/sity-choose.js" type="module"></script>
+    <script src="js/sity-choose.js" type="module"></script>
   </body>
 </html>
